components/quality-dashboard/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quality-frontend-dashboard
  namespace: quality-dashboard
spec:
  serviceAccountName: dashboard-proxy
  replicas: 1
  selector:
    matchLabels:
      app: quality-frontend-dashboard
  template:
    metadata:
      labels:
        app: quality-frontend-dashboard
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: dashboard-proxy
          image: openshift/oauth-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: public
          args:
          - --https-address=:8443
          - --provider=openshift
          - --openshift-service-account=proxy
          - --upstream=http://localhost:8080
          - --tls-cert=/etc/tls/private/tls.crt
          - --tls-key=/etc/tls/private/tls.key
          - --cookie-secret=SECRET
          volumeMounts:
          - mountPath: /etc/tls/private
            name: proxy-tls
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 100Mi
        - resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 32Mi
          name: quality-frontend-dashboard
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          image: >-
            quay.io/redhat-appstudio/quality-dashboard-frontend:bca48e980e10838ef6510c416ed4004dfb9f1d38
      volumes:
        - name: proxy-tls
          secret:
            secretName: proxy-tls
