components/quality-dashboard/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: quality-frontend-service
  namespace: quality-dashboard
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: quality-frontend-dashboard
