components/quality-dashboard/frontend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quality-frontend-route
  namespace: quality-dashboard
spec:
  to:
    kind: Service
    name: quality-frontend-service
  port:
    targetPort: 8443
  tls:
      termination: Reencrypt
